# Rapyd-Python-SDK

./: .gitignore  .manifest.json  LICENSE  LICENSE.md  PyPI_README.md  README.md  install.cmd  install.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md  feedback-template.md  feedback-template.yml
documentation/models/: Account.md  AccountLimitsBody.md  AccountTransferBody.md  Address.md  Address1.md  AddressResponse.md  ApplePayObject.md  ApplePayObjectResponse.md  ApplicationsHostedBody.md  BankaccountsBankaccounttransfertobankaccountBody.md  BankaccountsVirtualAccountIdBody.md  Beneficiary.md  BeneficiaryValidateBody.md  BinDetails.md  CardTokenResponse.md  CardTokenResponseCardFields.md  CardTokenResponsePaymentParams.md  CardTransaction.md  Category.md  CheckoutPageResponse.md  ClientDetailsObject.md  CollectCardBody.md  CollectPaymentsBody.md  Condition.md  Contact.md  ContactBusiness.md  Coupon.md  Customer.md  CustomerIdPaymentMethodsBody.md  CustomerPaymentMethod.md  CustomerPaymentMethods.md  CustomerRequest.md  CustomerRequestPaymentMethod.md  DailyRate.md  Discount.md  DiscountCustomerResponse.md  Dispute.md  EntityType.md  EntityTypeVerify.md  EscrowEscrowReleasesBody.md  (+257 more)
documentation/services/: CheckoutPageService.md  CouponService.md  CustomerPaymentMethodService.md  CustomerService.md  DigitalWalletService.md  DisburseService.md  DisputeService.md  EWalletsService.md  EscrowService.md  FxService.md  GroupPaymentService.md  (+17 more)
examples/: .env.example  README.md  install.cmd  install.sh  install_py3.sh  sample.py
(+797 files in other folders)
