[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rapydsdk"
version = "1.0.5"
license = { text = "MIT" }
description = """This is Rapyd OpenAPI"""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	"requests",
	"http-exceptions"
]

[project.optional-dependencies]
test = [ 
	"pytest",
	"responses"
]
