[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rapyd-sdk"
version = "1.0.6"
license = { file = "LICENSE" }
description = """This is Rapyd OpenAPI"""
readme = "PyPI_README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0"
]
